--- a/public/found-new.html
+++ b/public/found-new.html
@@ -14,7 +14,8 @@
         <div class="card-body">
           <h1 class="page-title">Submit Found Item</h1>
           <p class="muted">
-            Fill in details so others can claim it. Image must be a link (optional).
+            Fill in details so others can claim it. Image must be a link
+            (optional).
           </p>
 
           <form id="foundForm" class="form">
