--- a/public/found-my.html
+++ b/public/found-my.html
@@ -7,17 +7,34 @@
     <link rel="stylesheet" href="/css/base.css" />
     <style>
       #foundSearch {
-        width: 100%; padding: 6px; border: 1px solid #ccc;
-        border-radius: 4px; margin-top: 12px; margin-bottom: 8px;
+        width: 100%;
+        padding: 6px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        margin-top: 12px;
+        margin-bottom: 8px;
       }
-      .filter-row { display: flex; gap: 8px; margin-bottom: 12px; flex-wrap: wrap; }
+      .filter-row {
+        display: flex;
+        gap: 8px;
+        margin-bottom: 12px;
+        flex-wrap: wrap;
+      }
       .filter-row select {
-        flex: 1; min-width: 120px; padding: 6px;
-        border: 1px solid #ccc; border-radius: 4px; font-size: 14px;
+        flex: 1;
+        min-width: 120px;
+        padding: 6px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 14px;
       }
       .filter-row button {
-        padding: 6px 12px; border: 1px solid #ccc; border-radius: 4px;
-        background: white; cursor: pointer; font-size: 14px;
+        padding: 6px 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        background: white;
+        cursor: pointer;
+        font-size: 14px;
       }
     </style>
   </head>
@@ -31,24 +48,53 @@
             <div class="spacer"></div>
             <a class="btn btn-primary" href="/found-new.html">Submit New</a>
           </div>
-          <input type="text" id="foundSearch" placeholder="Search found items..." aria-label="Search found items" />
+          <input
+            type="text"
+            id="foundSearch"
+            placeholder="Search found items..."
+            aria-label="Search found items"
+          />
           <div class="filter-row">
             <select id="filterCategory" aria-label="Filter by category">
               <option value="">All Categories</option>
-              <option>Electronics</option><option>ID / Card</option><option>Keys</option>
-              <option>Wallet</option><option>Clothing</option><option>Books / Notes</option>
-              <option>Accessories / Jewelry</option><option>Bag / Backpack</option>
-              <option>Water Bottle</option><option>Other</option>
+              <option>Electronics</option>
+              <option>ID / Card</option>
+              <option>Keys</option>
+              <option>Wallet</option>
+              <option>Clothing</option>
+              <option>Books / Notes</option>
+              <option>Accessories / Jewelry</option>
+              <option>Bag / Backpack</option>
+              <option>Water Bottle</option>
+              <option>Other</option>
             </select>
             <select id="filterLocation" aria-label="Filter by location">
               <option value="">All Locations</option>
-              <option>Library</option><option>Classroom</option><option>Lecture Hall</option>
-              <option>Cafeteria</option><option>Gym</option><option>Dormitory</option>
-              <option>Student Center</option><option>Parking Lot</option>
-              <option>Bus Stop</option><option>Outdoor / Courtyard</option><option>Other</option>
+              <option>Library</option>
+              <option>Classroom</option>
+              <option>Lecture Hall</option>
+              <option>Cafeteria</option>
+              <option>Gym</option>
+              <option>Dormitory</option>
+              <option>Student Center</option>
+              <option>Parking Lot</option>
+              <option>Bus Stop</option>
+              <option>Outdoor / Courtyard</option>
+              <option>Other</option>
             </select>
-            <input type="date" id="filterDate" aria-label="Filter by date"
-              style="flex:1; min-width:120px; padding:6px; border:1px solid #ccc; border-radius:4px; font-size:14px;" />
+            <input
+              type="date"
+              id="filterDate"
+              aria-label="Filter by date"
+              style="
+                flex: 1;
+                min-width: 120px;
+                padding: 6px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                font-size: 14px;
+              "
+            />
             <button id="clearFilters">Clear</button>
           </div>
           <div id="msg" class="alert" style="display: none"></div>
